# code-dream-weaver

./: .env.example  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SUGGESTIONS.md  USAGE.md
src/oneirocode/: __init__.py  analyzer.py  ast_parser.py  cli.py  motif_detector.py  narrative_synthesizer.py  symbolic_ontology.py  tension_detector.py
tests/: test_analyzer.py  test_ast_parser.py  test_cli.py  test_motif_detector.py  test_narrative_synthesizer.py  test_symbolic_ontology.py  test_tension_detector.py
